--- a/adb-starter.service
+++ b/adb-starter.service
@@ -3,7 +3,7 @@ Description=Android Debug Server Daemon
 
 [Service]
 Type=forking
-User=root
+User=boss
 ExecStart=/usr/bin/adb start-server
 ExecStop=/usr/bin/adb kill-server
 
